change from master to main

--- a/Intro-to-html/styles/general.css
+++ b/Intro-to-html/styles/general.css
@@ -4,9 +4,10 @@ p{
   margin-bottom: 0;
 }
 body{
-  margin:opx;
+  margin: o;
   padding: 80px;
-  
+  padding-left: 140px;
+
   
   margin-bottom: 1000px;
 }
