--- a/Intro-to-html/styles/general.css
+++ b/Intro-to-html/styles/general.css
@@ -5,8 +5,8 @@ p{
 }
 body{
   margin: o;
-  padding: 80px;
-  padding-left: 140px;
+  padding-top: 80px;
+  padding-left: 80px;
 
   
   margin-bottom: 1000px;
