--- a/Intro-to-html/styles/header.css
+++ b/Intro-to-html/styles/header.css
@@ -8,6 +8,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
   background-color: white;
   border-bottom-width: 1px;
   border-bottom-style: solid;
@@ -97,7 +98,6 @@ background-color: rgb(245, 245, 245);
 }
 
 .right-section{
-
   width: 180px;
   margin-right: 20px;
   display: flex;
@@ -116,6 +116,26 @@ background-color: rgb(245, 245, 245);
 .notification-icon{
   height: 24px;
 }
+
+.notificatios-icon-container{
+  position: relative;
+}
+
+.notifications-count{
+  position: absolute;
+  top: 10px;
+  right: 75px;
+  background-color: rgb(200, 0, 0);
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 11px;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: -5px;
+  padding-bottom: 1px;
+  border-radius: 6px;
+}
+
 .current-user-picture{
   height: 32px;
   border-radius: 16px;
