--- a/Intro-to-html/styles/general.css
+++ b/Intro-to-html/styles/general.css
@@ -6,7 +6,9 @@ p{
 body{
   margin: o;
   padding-top: 80px;
-  padding-left: 80px;
+  padding-left: 96px;
+  padding-right: 24px;
+  background-color: rgb(248, 245, 245);
 
   
   margin-bottom: 1000px;
