--- a/Intro-to-html/styles/header.css
+++ b/Intro-to-html/styles/header.css
@@ -74,11 +74,50 @@ border-style: solid;
 border-color: rgb(192, 192, 192) ;
 margin: -1px;
 margin-right: 10px;
+
+
+}
+
+.search-button, 
+.voice-search-button
+.upload-icon-container{
+  display: flex;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+}
+
+
+.search-button .tooltip, 
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip{
+  font-family: Roboto, Arial;
+  position: absolute;
+  background-color: gray;
+  color: white;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-radius: 4px;
+  font-size: 12px;
+  bottom: -30px;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+
+.search-button:hover .tooltip, 
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip{
+  opacity: 1;
+
 }
 
 .search-icon{
   height: 25px;
-  margin-top: 4px;
+
 }
 
 .voice-search-button{
@@ -87,12 +126,12 @@ width: 40px;
 border-radius: 20px;
 border: none;
 background-color: rgb(245, 245, 245);
-
 }
+
 
 .voice-search-icon{
   height: 24px;
-  margin-top: 4px;
+ 
   
   
 }
