--- a/Intro-to-html/styles/header.css
+++ b/Intro-to-html/styles/header.css
@@ -79,8 +79,10 @@ margin-right: 10px;
 }
 
 .search-button, 
-.voice-search-button
-.upload-icon-container{
+.voice-search-button,
+.upload-icon-container,
+.youtube-icon-container,
+.notifications-icon-container{
   display: flex;
   justify-content: center;
   position: relative;
@@ -90,7 +92,9 @@ margin-right: 10px;
 
 .search-button .tooltip, 
 .voice-search-button .tooltip,
-.upload-icon-container .tooltip{
+.upload-icon-container .tooltip,
+.youtube-icon-container .tooltip,
+.notifications-icon-container .tooltip{
   font-family: Roboto, Arial;
   position: absolute;
   background-color: gray;
@@ -110,7 +114,9 @@ margin-right: 10px;
 
 .search-button:hover .tooltip, 
 .voice-search-button:hover .tooltip,
-.upload-icon-container:hover .tooltip{
+.upload-icon-container:hover .tooltip,
+.youtube-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip{
   opacity: 1;
 
 }
@@ -162,8 +168,8 @@ background-color: rgb(245, 245, 245);
 
 .notifications-count{
   position: absolute;
-  top: 10px;
-  right: 75px;
+  top: -1px;
+  right: -2px;
   background-color: rgb(200, 0, 0);
   color: white;
   font-family: Roboto, Arial;
